WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92763
[BlackBerry] Fix crash in InputHandler spell checking.
https://bugs.webkit.org/show_bug.cgi?id=92763
Summary
[BlackBerry] Fix crash in InputHandler spell checking.
Mike Fenton
Reported
2012-07-31 08:55:08 PDT
SSIA
Attachments
Patch
(3.29 KB, patch)
2012-07-31 09:42 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-07-31 09:42:22 PDT
Created
attachment 155570
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-31 11:43:18 PDT
Comment on
attachment 155570
[details]
Patch Clearing flags on attachment: 155570 Committed
r124227
: <
http://trac.webkit.org/changeset/124227
>
WebKit Review Bot
Comment 3
2012-07-31 11:43:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug