[BlackBerry] Fix crash in InputHandler spell checking. https://bugs.webkit.org/show_bug.cgi?id=92763

Reviewed by Antonio Gomes.

PR 185574.

Fix crash in getSpellChecker by guarding the calling paths
to ensure that m_currentFocusElement is valid.

Also add ASSERTs for previous crash.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::spellCheckingRequestProcessed):
(BlackBerry::WebKit::InputHandler::spellCheckingRequestCancelled):
(BlackBerry::WebKit::InputHandler::getSpellChecker):


git-svn-id: svn://svn.chromium.org/blink/trunk@124227 bbb929c8-8fbe-4397-9dbb-9b2b20218538