third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp
@@ -578,7 +578,7 @@ int32_t InputHandler::convertTransactionIdToSequenceId(int32_t transactionId)
 
 void InputHandler::spellCheckingRequestProcessed(int32_t transactionId, spannable_string_t* spannableString)
 {
-    if (!spannableString) {
+    if (!spannableString || !isActiveTextEdit()) {
         spellCheckingRequestCancelled(transactionId, false /* isSequenceId */);
         return;
     }
@@ -626,6 +626,9 @@ void InputHandler::spellCheckingRequestProcessed(int32_t transactionId, spannabl
 
 void InputHandler::spellCheckingRequestCancelled(int32_t id, bool isSequenceId)
 {
+    if (!isActiveTextEdit())
+        return;
+
     int32_t sequenceId = isSequenceId ? id : convertTransactionIdToSequenceId(id);
     SpellChecker* sp = getSpellChecker();
     if (!sp) {
@@ -637,6 +640,9 @@ void InputHandler::spellCheckingRequestCancelled(int32_t id, bool isSequenceId)
 
 SpellChecker* InputHandler::getSpellChecker()
 {
+    ASSERT(m_currentFocusElement);
+    ASSERT(m_currentFocusElement->document());
+
     if (Frame* frame = m_currentFocusElement->document()->frame())
         if (Editor* editor = frame->editor())
             return editor->spellChecker();
